# example-cython-package

./: LICENSE  README.md  build.sh  pyproject.toml  pyproject.toml_bak  query.json  requirements.txt  setup.py
.github/workflows/: release.yml  wheels.yml
binary_vector/: binary_vector.cpp  binary_vector.pxd  binary_vector_purepy.py  spdlog.pxd  vector.cpp  vector.pxd  vector.py  vector.pyx
