[build-system]
requires = ["setuptools>=61.0.0", "wheel", "chardet"]
build-backend = "setuptools.build_meta"

[project]
name = "binary_vector"
authors = [{ name = "hsz", email = "hsz1273327@mail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "A sample Cython project for test."
keywords = ["test"]
license = { file = "LICENSE" }
dynamic = ["version", "readme", "dependencies"]
requires-python = "~=3.10"

[project.urls]
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
documentation = "https://readthedocs.org"
homepage = "https://example.com"
repository = "https://github.com/me/spam.git"


[tool.setuptools]
platforms = ["all"]
include-package-data = true

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
version = { attr = "binary_vector.version.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd", "*.h", "*.c", "*.hpp", "*.cpp"]

[tool.setuptools.packages.find]
exclude = ['contrib', 'docs', 'test']
